# axon

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  INDEX.md  LICENSE  PLAN.md  PROGRESS.md  README.md  axon.example.toml  docker-compose.yml  okd-proxmox-install.md  openshift-overview.md  proxmox-overview.md
.claude/: settings.json
.github/workflows/: ci.yml
src/: error.rs  lib.rs  main.rs
src/adapters/: claude.rs  claude_streaming.rs  gemini.rs  gemini_streaming.rs  mod.rs  ollama.rs  ollama_streaming.rs  openai.rs  openai_streaming.rs  streaming.rs
src/cli/: mod.rs
src/config/: mod.rs
src/persistence/: file_store.rs  memory_store.rs  mod.rs
src/protocol/: agent.rs  conversation.rs  message.rs  mod.rs
src/router/: mod.rs  router.rs
src/server/: api.rs  mod.rs  state.rs  websocket.rs
src/tools/: filesystem.rs  minky.rs  mod.rs  registry.rs  shell.rs  web.rs
src/utils/: mod.rs  rate_limiter.rs  retry.rs
